Closed Bug 393923 Opened 17 years ago Closed 17 years ago

"ASSERTION: Invalid offset" and "ASSERTION: aPos out of range" with rtl, :first-letter

Categories

(Core :: Layout: Text and Fonts, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: roc)

References

Details

(Keywords: assertion, rtl, testcase)

Attachments

(2 files)

Attached file testcase
###!!! ASSERTION: Invalid offset: 'aOffset <= mSkipChars->mCharCount', file /Users/jruderman/trunk/mozilla/gfx/thebes/src/gfxSkipChars.cpp, line 92

###!!! ASSERTION: aPos out of range: '0 <= aPos && aPos < mCharacterCount', file ../../../dist/include/thebes/gfxFont.h, line 563

Also, none of the letters gets the first-letter style.
Assignee: nobody → roc
Flags: blocking1.9?
doesn't seem like this should assert but i don't get any characters in firefox2 so i'm not sure if we should block on this.  thoughts?
We probably should, but this should be in Layout anyway so it's not your problem
Assignee: roc → nobody
Component: GFX: Thebes → Layout: Fonts and Text
QA Contact: thebes → layout.fonts-and-text
Assignee: nobody → roc
I'd nominate this for blocking just because the assertions sound scary.  (Also, the "Invalid offset" assertion can be triggered by lots of bugs, and having this fixed will make it easier to continue looking for such bugs.)
Attached patch fix assertionsSplinter Review
Stupid bug here, trivial fix.

This fixes the assertions, but the first-letter isn't displayed as magenta. That must be a separate bug.
Attachment #278711 - Flags: review?(smontagu)
I filed bug 393985 on this and other cases where the first-letter style isn't applied.

(In reply to comment #1)

> doesn't seem like this should assert but i don't get any characters in firefox2
> so i'm not sure if we should block on this.  thoughts?

That was bug 198928, FWIW
Attachment #278711 - Flags: review?(smontagu) → review+
Comment on attachment 278711 [details] [diff] [review]
fix assertions

a1.9=dbaron
Attachment #278711 - Flags: approval1.9? → approval1.9+
checked in
Status: NEW → RESOLVED
Closed: 17 years ago
Flags: blocking1.9?
Resolution: --- → FIXED
Flags: in-testsuite?
Crashtest checked in.  Bug 393985 will eventually get a reftest.
Flags: in-testsuite? → in-testsuite+
Mass-assigning the new rtl keyword to RTL-related (see bug 349193).
Keywords: rtl
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: