Bug 393923. Fix text-offset calculation for first-letter. r=smontagu,a=dbaron